Fixed arrow issue on ie

--- a/app/assets/sass/v2/new/_boxes.scss
+++ b/app/assets/sass/v2/new/_boxes.scss
@@ -277,6 +277,7 @@
 .tl-employer-benefits--arrow {
     min-height: 53px;
     min-width: 45px;
+    max-height: 30px;
     width: auto;
     margin-right: 10px;
     position: relative;
